# lnspec-codegen.py

./: LICENSE.md  Makefile  README.md  codegen.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
codegen/: spec_gen.js  spec_gen.py
lnspec_codegen/: __init__.py
lnspec_codegen/langs/: __init__.py  dart.py  generator_interface.py  javascript.py  python.py
lnspec_codegen/utils/: __init__.py  type_field.py
tests/: test_lnspec_codegen.py
