[tool.poetry]
name = "lnspec-codegen"
version = "0.1.0"
description = "A lightning network spec generator is written in python as an experiment."
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
pyln-proto = "^0.10.1"
black = "^21.8b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
